--- a/web/server/views/sass/includes/partials/item.njk
+++ b/web/server/views/sass/includes/partials/item.njk
@@ -1,4 +1,4 @@
-<section id="{{ group_name }}-{{ item.context.type }}-{{ item.context.name }}">
+<section id="{{ item.context.type }}-{{ item.context.name }}">
 
 	{% include '../annotations/name.njk' %}
 
