--- a/web/server/views/sass/includes/annotations/example.njk
+++ b/web/server/views/sass/includes/annotations/example.njk
@@ -14,6 +14,8 @@
 			<h5>Example</h5>
 		{% endif %}
 
-		{{ renderExample(example.code, example.type) }}
+		{% source "scss", example.description | striptags -%}
+			{{ example.code }}
+		{%- endsource -%}
 	{% endfor %}
 {% endif %}
