#62 Implement responsive embed component

--- a/src/stylesheets/components/_components.scss
+++ b/src/stylesheets/components/_components.scss
@@ -5,6 +5,7 @@
 'components-buttons',
 'components-footer',
 'components-phase',
+'components-maintain-ratio',
 'components-navbar',
 'components-nav',
 'components-breadcrumbs',
