#62 - Add components page for responsive embeds

--- a/web/server/views/components/_components-layout.njk
+++ b/web/server/views/components/_components-layout.njk
@@ -11,6 +11,7 @@
 			<li><a href="/components/breadcrumbs">Breadcrumbs</a></li>
 			<li><a href="/components/navigation">Navigation</a></li>
 			<li><a href="/components/tabs">Tabs</a></li>
+			<li><a href="/components/maintain-ratio">Maintain ratio</a></li>
 		</ul>
 	</nav>
 
