--- a/web/server/views/components/index.njk
+++ b/web/server/views/components/index.njk
@@ -30,6 +30,8 @@
 
 			{{ item("Navigation", "/components/navigation", "Lorem ipsum dolor sit amet, consectetur adipisicing elit.") }}
 
+			{{ item("Maintain ratio", "/components/maintain-ratio", "Maintain an aspect ratio for responsive embedding") }}
+
 		</div>
 	</div>
 
