--- a/web/server/views/sass/includes/annotations/preview.njk
+++ b/web/server/views/sass/includes/annotations/preview.njk
@@ -1,7 +1,7 @@
 {# CSS Selectors #}
 {% if item.context.type == "css" %}
 
-	CSS Selector: {{ item.context.name }}
+	{# NOOP #}
 
 {# Placeholders #}
 {% elif item.context.type == "placeholder" %}
