--- a/web/server/views/sass/includes/annotations/see.njk
+++ b/web/server/views/sass/includes/annotations/see.njk
@@ -1,6 +1,6 @@
-{% if item.see.length > 1 %}
+{% if item.see.length >= 1 %}
 	<div class="grid__item one-whole tablet--one-half desktop--one-third">
-		<h5>See</h5>
+		<h5>See also</h5>
 
 		<ul>
 			{% for see in item.see %}
