--- a/src/stylesheets/components/_components-maintain-ratio.scss
+++ b/src/stylesheets/components/_components-maintain-ratio.scss
@@ -9,14 +9,14 @@
 /// Automatically applies to `iframe`, `embed`, `object` and `video` tags.
 /// Alternatively, you can use the `__item` selector to specify the element directly.
 ///
-/// Modifiers:
+/// BEM elements:
+///   - `__item`
+///
+/// BEM modifiers:
 ///   - `--21-9`
 ///   - `--16-9`
 ///   - `--4-3`
 ///   - `--square`
-///
-/// Elements:
-///   - `__item`
 ///
 /// @example html - Sixteen by nine example
 ///   <div class="maintain-ratio maintain-ratio--16-9">
