--- a/src/stylesheets/settings/_settings.scss
+++ b/src/stylesheets/settings/_settings.scss
@@ -1,4 +1,4 @@
 @import 'settings-modular-scale',
 'settings-colours',
-'settings-variables';
-//'settings-susy';
+'settings-variables',
+'settings-susy';
