--- a/web/server/views/index.njk
+++ b/web/server/views/index.njk
@@ -2,7 +2,7 @@
 {% set title = "NICE Bootstrap v2" %}
 
 {% macro item(title, href, description) %}
-	<div class="grid__item one-whole tablet--one-third desktop--one-quarter">
+	<div class="col-12 col-md-4 col-lg-3">
 		<h4 class="h6">{{ title }}</h4>
 		<p>
 			{{ description }}
